# SPH

./: .gitignore  CMakeLists.txt  LICENCE.md  Makefile  README.md  SConscript  SConstruct  default_parameter.yaml  sample.param  simulation.param
output/ascii/: columns
src/: ascii_output.cpp  ascii_output.hpp  compute.cpp  compute.h  compute.hpp  initialization.cpp  initialization.h  initialization.hpp  kernel.cpp  kernel.hpp  main.cpp  neighbors.cpp  neighbors.h  parameter.cpp  parameter.hpp  random_pool.cpp  random_pool.hpp  renderer.cpp  renderer.h  renderer.hpp  vtk.cpp  vtk.h  vtk.hpp
src/data/: grid.h  mesh.cpp  mesh.h  neighbors.cpp  neighbors.h  vector3D.h
src/distribution/: distribution.h  distributionEnums.h  domain.cpp  domain.h  fastPoissonDisk.cpp  fastPoissonDisk.h  goldenSet.cpp  goldenSet.h  halton.cpp  halton.h  hammersley.cpp  hammersley.h  spherePacking.cpp  spherePacking.h  volumeGrid.cpp  volumeGrid.h  whiteNoise.cpp  whiteNoise.h
src/kernel/: bidomain.cpp  bidomain.h  bidomain.hpp  cubic_spline.cpp  cubic_spline.h  cubic_spline.hpp  gaussian.cpp  gaussian.h  gaussian.hpp  kernel.cpp  kernel.h  kernel.hpp  poly_6.cpp  poly_6.h  spiky.cpp  spiky.h  wendland.cpp  wendland.h
src/output/: ascii_output.cpp  ascii_output.h  debug_renderer.cpp  debug_renderer.h  vtk.cpp  vtk.h
src/simulation/: compute.cpp  compute.h  initialization.cpp  initialization.h
src/util/: misc_math.h  parallel_bounds.cpp  parallel_bounds.h  random_pool.cpp  random_pool.h
